<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/list_books_fragment"
        android:icon="@drawable/ic_library_books"
        android:enabled="true"
        android:title="@string/NavBarMenu_title_Library"/>

    <item
        android:id="@+id/my_account_fragment"
        android:icon="@drawable/ic_home"
        android:enabled="true"
        android:title="@string/NavBarMenu_title_Home"/>

    <item
        android:id="@+id/find_author_fragment"
        android:icon="@drawable/ic_find_author"
        android:enabled="true"
        android:title="@string/NavBarMenu_title_FindWriter"/>

    <item
        android:id="@+id/add_book_fragment"
        android:icon="@drawable/ic_book"
        android:enabled="true"
        android:visible="false"
        android:title="@string/NavBarMenu_title_AddNewBook"/>

</menu>