<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/linear_add_new_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title_add_book"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/AddBookFragment_TextView_title_AddNewBook"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"  />

        <EditText
            android:id="@+id/input_book_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/AddBookFragment_EditText_hint_BookName"
            android:inputType="text"
            android:autofillHints="Book name" />

        <EditText
            android:id="@+id/input_author_name"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/AddBookFragment_EditText_hint_AuthorName"
            android:inputType="text"
            android:autofillHints="Author" />

        <EditText
            android:id="@+id/input_book_description"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/AddBookFragment_EditText_hint_BookDescription"
            android:inputType="textMultiLine"
            android:lines="3"
            android:minLines="1"
            android:maxLines="10"
            android:gravity="top|start"
            android:maxLength="255"
            android:scrollbars="vertical"
            android:autofillHints="Description" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/AddBookFragment_Button_text_AddBook"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

</RelativeLayout>